[2829591]Implement stateless aggregation.

--- a/flink-streaming-java/pom.xml
+++ b/flink-streaming-java/pom.xml
@@ -122,6 +122,7 @@ under the License.
 						<excludes combine.children="append">
 							<exclude>org.apache.flink.streaming.api.datastream.DataStream#assignTimestamps(org.apache.flink.streaming.api.functions.TimestampExtractor)</exclude>
 							<exclude>org.apache.flink.streaming.api.operators.TwoInputStreamOperator</exclude>
+							<exclude>org.apache.flink.streaming.api.functions.KeyedProcessFunction</exclude>
 						</excludes>
 						<ignoreMissingClasses>true</ignoreMissingClasses>
 					</parameter>
