--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -77,7 +77,8 @@ global:
         numJobRequiredWorkers,
         numberOfRecoverSuccess,
         numberOfRecoverFailed,
-        numberOfCheckpointPlaceholderTransformed
+        numberOfCheckpointPlaceholderTransformed,
+        numberOfTmExceedQuota
     ]
 
 non-global:
@@ -266,6 +267,7 @@ non-global:
         stateAverageOpRate,
         stateTotalSize,
         stateMetricsOfCompactionFlush,
+        localStateSize,
       # cep
         numLateRecordsDropped,
         numLateRecordsOutput,
