--- a/flink-connectors/flink-connector-abase/pom.xml
+++ b/flink-connectors/flink-connector-abase/pom.xml
@@ -75,6 +75,20 @@ under the License.
 			<version>1.0.26</version>
 		</dependency>
 
+		<!-- test -->
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-table-planner-blink_${scala.binary.version}</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-test-utils_${scala.binary.version}</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
