--- a/flink-connectors/flink-connector-rocketmq/pom.xml
+++ b/flink-connectors/flink-connector-rocketmq/pom.xml
@@ -92,6 +92,10 @@ under the License.
 					<groupId>org.jetbrains</groupId>
 					<artifactId>annotations</artifactId>
 				</exclusion>
+				<exclusion>
+					<artifactId>spring-cloud-circuitbreaker-spring-retry</artifactId>
+					<groupId>org.springframework.cloud</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -99,6 +103,29 @@ under the License.
 			<artifactId>flink-table-planner-blink_${scala.binary.version}</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-connector-base</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>5.1.4.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-json</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-test-utils_${scala.binary.version}</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
