--- a/pom.xml
+++ b/pom.xml
@@ -1505,6 +1505,8 @@ under the License.
 						<exclude>flink-connectors/flink-connector-kafka-0.11/src/test/resources/**</exclude>
 						<exclude>flink-connectors/flink-connector-hive/src/test/resources/**</exclude>
 						<exclude>flink-connectors/flink-connector-bytesql/src/test/resources/statements-validation/*.out</exclude>
+						<exclude>flink-connectors/flink-connector-bmq/src/test/java/org/apache/flink/connector/bmq/generated/*.java</exclude>
+						<exclude>flink-connectors/flink-connector-bmq/src/test/resources/**</exclude>
 						<exclude>flink-end-to-end-tests/flink-tpcds-test/tpcds-tool/answer_set/*</exclude>
 						<exclude>flink-end-to-end-tests/flink-tpcds-test/tpcds-tool/query/*</exclude>
 
