Revert "[#3432553] Task failover when PartitionRequestQueue occur exception"
This reverts commit 7e585c29

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -81,8 +81,7 @@ global:
         numberOfRecoverSuccess,
         numberOfRecoverFailed,
         numberOfCheckpointPlaceholderTransformed,
-        numberOfTmExceedQuota,
-        upstreamTaskErrorNum
+        numberOfTmExceedQuota
     ]
 
 non-global:
@@ -128,8 +127,6 @@ non-global:
         outPoolUsage,
       # Task InputChannels number
         numberOfInputChannels,
-      # Task error info
-        upstreamTaskErrorNum,
       # In/Out Record Number
         numRecordsInPerSecond,
         numRecordsOutPerSecond,
