[#3885745] Fix discarding expired chk folders by completedCheckpoints

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -81,7 +81,8 @@ global:
         numberOfRecoverSuccess,
         numberOfRecoverFailed,
         numberOfCheckpointPlaceholderTransformed,
-        numberOfTmExceedQuota
+        numberOfTmExceedQuota,
+        numberOfFailedDiscardExpiredCheckpointFolder
     ]
 
 non-global:
