[#3595276]Blacklist support to release all tm on the machine immediately after encountering a critical failure

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -206,6 +206,7 @@ non-global:
         processingTimerLatencyMin,
       # Blacklist
         numTaskManagersInBlacklist,
+        criticalErrorNum,
       # number of skipped records in source
         skipDirty,
       # number of write failed in sink
