--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -687,6 +687,7 @@ quail:
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
+  blacklist.taskmanager.critical.error.enabled: true
 
 quoll:
   dc: cn
@@ -697,6 +698,7 @@ quoll:
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
   bytedance.streaming.yarn.res-lake.enabled: false
   yarn.res-lake.enabled: true
+  blacklist.taskmanager.critical.error.enabled: true
 
 quoka:
   dc: cn
@@ -711,6 +713,7 @@ quoka:
   restart-strategy.recoverable-failure-rate.enable: true
   bytedance.streaming.yarn.check.application.name.unique.region: true
   restart-strategy: aggregated-failure-rate
+  blacklist.taskmanager.critical.error.enabled: true
 
 quaga:
   dc: cn
@@ -730,6 +733,7 @@ quele:
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   bytedance.streaming.yarn.gang-scheduler.container-descheduler.enable: true
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
+  blacklist.taskmanager.critical.error.enabled: true
 
 camel:
   dc: cn
