--- a/flink-connectors/flink-connector-bytesql/pom.xml
+++ b/flink-connectors/flink-connector-bytesql/pom.xml
@@ -36,7 +36,7 @@ under the License.
 		<dependency>
 			<groupId>com.bytedance.infra</groupId>
 			<artifactId>bytesql4j</artifactId>
-			<version>1.2.7-no-shade</version>
+			<version>1.1.9</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>scala-library</artifactId>
