[4209502] Fix the cpu update bug of sr and add st metrics

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -300,7 +300,12 @@ non-global:
         TMHeartbeatTimeoutFromRM,
         TMHeartbeatTimeoutFromJM,
       # am
-        timeOfAMStart
+        timeOfAMStart,
+
+      # smart resource
+        smartResourcesEnable,
+        srContainerUpdateSuccessCounter,
+        srContainerUpdateFailedCounter
     ]
 
 report-during-unregister:
