--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -479,6 +479,7 @@ wj:
   high-availability.zookeeper.quorum: 10.8.32.25:2184,10.8.32.68:2184,10.8.32.74:2184,10.8.32.72:2184,10.8.39.142:2184
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/flink_hl
+  blacklist.taskmanager.critical.error.enabled: true
 
 hl:
   dc: cn
@@ -488,6 +489,7 @@ hl:
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   bytedance.streaming.yarn.res-lake.enabled: false
   yarn.res-lake.enabled: true
+  blacklist.taskmanager.critical.error.enabled: true
 
 hyrax:
   dc: cn
@@ -500,6 +502,7 @@ hyrax:
   restart-strategy.recoverable-failure-rate.fallback-global-restart: true
   restart-strategy.recoverable-failure-rate.enable: true
   restart-strategy: aggregated-failure-rate
+  blacklist.taskmanager.critical.error.enabled: true
 
 horse:
   dc: cn
@@ -523,6 +526,7 @@ topi:
   high-availability.zookeeper.quorum: 10.226.128.46:2181,10.226.128.80:2181,10.226.128.67:2181,10.226.128.74:2181,10.226.128.64:2181
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  blacklist.taskmanager.critical.error.enabled: true
 
 hippo:
   dc: cn
@@ -530,6 +534,7 @@ hippo:
   high-availability.zookeeper.quorum: 10.226.128.46:2181,10.226.128.80:2181,10.226.128.67:2181,10.226.128.74:2181,10.226.128.64:2181
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  blacklist.taskmanager.critical.error.enabled: true
 
 heron:
   dc: cn
@@ -537,6 +542,7 @@ heron:
   high-availability.zookeeper.quorum: 10.226.128.46:2181,10.226.128.80:2181,10.226.128.67:2181,10.226.128.74:2181,10.226.128.64:2181
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  blacklist.taskmanager.critical.error.enabled: true
 
 herry:
   dc: cn
@@ -544,6 +550,7 @@ herry:
   high-availability.zookeeper.quorum: 10.226.128.110:2181,10.226.128.107:2181,10.226.107.216:2181,10.226.128.132:2181,10.226.128.118:2181
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  blacklist.taskmanager.critical.error.enabled: true
 
 hamer:
   dc: cn
@@ -551,6 +558,7 @@ hamer:
   high-availability.zookeeper.quorum: 10.226.128.46:2181,10.226.128.80:2181,10.226.128.67:2181,10.226.128.74:2181,10.226.128.64:2181
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  blacklist.taskmanager.critical.error.enabled: true
 
 hyena:
   dc: cn
@@ -560,6 +568,7 @@ hyena:
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   bytedance.streaming.yarn.res-lake.enabled: false
   yarn.res-lake.enabled: true
+  blacklist.taskmanager.critical.error.enabled: true
 
 hound:
   dc: cn
@@ -567,6 +576,7 @@ hound:
   high-availability.zookeeper.quorum: 10.226.128.46:2181,10.226.128.80:2181,10.226.128.67:2181,10.226.128.74:2181,10.226.128.64:2181
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  blacklist.taskmanager.critical.error.enabled: true
 
 hinny:
   dc: cn
