[#3852072] Metric job name fit dorado

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -58,6 +58,8 @@ global:
         checkpointWriteFileRate,
         checkpointWriteFileLatency,
         checkpointCloseFileLatency,
+        numberOfContinuousCheckpointFailure,
+        lastCheckpointDuration,
         preJobRawTotalStateSize,
         postJobRawTotalStateSize,
         numPatternsAdded,
