--- a/flink-connectors/flink-catalog-common/pom.xml
+++ b/flink-connectors/flink-catalog-common/pom.xml
@@ -35,7 +35,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<bytedance.schema.version>0.0.9</bytedance.schema.version>
+		<bytedance.schema.version>0.2.0-SNAPSHOT</bytedance.schema.version>
 	</properties>
 
 	<dependencies>
