[#4294096][preview] support preview connector.

--- a/flink-connectors/pom.xml
+++ b/flink-connectors/pom.xml
@@ -82,6 +82,7 @@ under the License.
 		<module>flink-connector-abase</module>
 		<module>flink-connector-bytetable</module>
 		<module>flink-connector-hsap</module>
+		<module>flink-connector-preview</module>
 	</modules>
 
 	<!-- override these root dependencies as 'provided', so they don't end up
