--- a/flink-connectors/flink-connector-rpc/pom.xml
+++ b/flink-connectors/flink-connector-rpc/pom.xml
@@ -51,6 +51,12 @@ under the License.
 		</dependency>
 
 		<dependency>
+			<groupId>org.byted.security</groupId>
+			<artifactId>zti-jwt-helper-java</artifactId>
+			<version>1.0.10</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
 			<version>3.9.1</version>
